# devcontainer-images

./: .gitignore  .pre-commit-config.yaml  README.md  makefile  pyproject.toml  tasks.py
.circleci/: config.yml
.devcontainer/: devcontainer.json
.github/workflows/: lint.yml  super-linter.yml
build_utils/: __init__.py
images/dev-cuda/src/: Dockerfile
images/dev-cuda/src/scripts/: add_nonroot_user.sh  install_common_utils.sh  install_preinstall_deps.sh  install_python.sh
images/dev-cuda/tests/: test.sh  test_zsh.sh
images/dev-cuda/tests/spec/: bash_spec.sh  common_spec.sh  spec_helper.sh  zsh_spec.sh
images/llama-factory/src/: Dockerfile
images/llama-factory/tests/: test.sh  test_utils.sh
images/llama-factory/tests/spec/: cuda_spec.sh  llama_factory_spec.sh  python_spec.sh
utils/: __init__.py  common.py  convert.py  docker.py  path.py
utils/test/: Dockerfile  multi_install_deps.sh
